(executable
 (name example)
 (modules example)
 (libraries core feather stdio)
 (preprocess
  (pps ppx_expect ppx_string)))

(executable
 (name async_example)
 (modules async_example)
 (libraries base feather feather_async stdio)
 (preprocess
  (pps ppx_expect ppx_let ppx_sexp_message ppx_string)))
